2009-11-29 - staticReflection-0.1.0alpha
----------------------------------------

- Initial project release.