@@ -1,4 +1,4 @@
-project.version=0.1.0
+project.version=0.1.1
 project.stability=alpha
 
 coding.standard=PDepend2
