@@ -2,8 +2,8 @@
 <?php
 
 $project = $argv[1] . '.phar';
-$output  = realpath( $argv[2] ) . '/' . $project;
-$input   = realpath( $argv[3] );
+$output  = realpath( $argv[3] ) . '/' . $argv[2] . '.phar';
+$input   = realpath( $argv[4] );
 
 $phar = new Phar( $output, 0, $project );
 $phar->buildFromDirectory( $input );
